test/data/semantic-errors/type-mismatch-return-value.ava
var firstFunction = function () -> return "hello"; end;

var secondFunction = function (x:int) -> return x + 1; end;

secondFunction(firstFunction());